# misc

./: .gitignore
AnalogClock/: AnalogClock.sln  MainForm.cs  Program.cs  appsettings.json
CapsSwitch/: CMakeLists.txt  CapsSwitch.c  CapsSwitch.rc  resource.h
Corruptioner/: Corruptioner.csproj  Corruptioner.sln  Program.cs
CsCreatorSkia/: CsCreatorSkia.csproj  CsCreatorSkia.sln  Program.cs
FastInventoryBook/: FastInventoryBook.csproj  FastInventoryBook.sln  README.md  appsettings.json  books.txt  publish.cmd
GetTube/: DownloadParameters.cs  GetTube.csproj  GetTube.sln  Program.cs  YoutubeProgress.cs  run.cmd
Html2Markdown/: Html2Markdown.sln  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  README.md
HttpDumper/: App.config  HttpDumper.csproj  HttpDumper.sln  Program.cs
ImageServer/: ImageServer.csproj  ImageServer.http  Program.cs  README.md  appsettings.json  publish.cmd
ImageTagging/: dictionary.txt  fill-in.py  fixed_tags.txt  forbidden_tags.txt  make.py  phase0.txt  phase1.txt  phase2.txt  split.sh  translate.py
InoAgent/: INOAGENT.PAR
IrbisRunner/: IrbisRunner.csproj  IrbisRunner.sln  Program.cs  app.config
Jenny/: Jenny.csproj  Jenny.sln  JennyArgs.cs  Program.cs  Seamstress.cs
KrayGemma/: KrayGemma.csproj  KrayGemma.sln  Program.cs  README.md  appsettings.json
KrayGeo/: main.py  places.txt
KrayGptNet/: KrayGptNet.csproj  Program.cs  README.md  appsettings.json  publish.cmd
KrayLlama/: Directory.Packages.props  KrayLlama.slnx  global.json
KrayLlama/LlmSync/: CMakeLists.txt  README.md  build_msvc.cmd  main.c
(+224 files in other folders)
